Templates/FedoraMinimal changed

--- a/Templates/FedoraMinimal.html
+++ b/Templates/FedoraMinimal.html
@@ -13,3 +13,5 @@
 <p>And maybe some more optional but useful packages as well:</p>
 <pre class="wiki"><code>[user@F20-Minimal ~]$ sudo yum install pci-tools vim-minimal less tcpdump</code></pre>
 <p>If Your network device needs some firmware then you should also install the correspondong packages as well. The <code>lspci; yum search firmware</code> command will help to choose the right one :)</p>
+<h3 id="ProxyVM">ProxyVM</h3>
+<p>FIXME</p>
