--- a/Templates/FedoraMinimal.html
+++ b/Templates/FedoraMinimal.html
@@ -7,6 +7,9 @@
 <h2 id="Usage">Usage</h2>
 <p>It is a good idea to clone the original template, and make any changes in the new clone instead:</p>
 <pre class="wiki"><code>[user@dom0 ~]$ qvm-clone fedora-20-x64-minimal &lt;your new template name&gt;</code></pre>
+<p>The sudo package is also missing from this template, but easy to install:</p>
+<pre class="wiki"><code>[user@F20-Minimal ~]$ su - 
+[user@F20-Minimal ~]$ yum install sudo</code></pre>
 <h3 id="NetVM">NetVM</h3>
 <p>If You want to use this template to for standard NetVMs You should install some more packeges:</p>
 <pre class="wiki"><code>[user@F20-Minimal ~]$ sudo yum install NetworkManager network-manager-applet  wireless-tools dbus-x11 dejavu-sans-fonts</code></pre>
