Templates/FedoraMinimal changed

--- a/Templates/FedoraMinimal.html
+++ b/Templates/FedoraMinimal.html
@@ -7,7 +7,7 @@
 <h2 id="Usage">Usage</h2>
 <p>It is a good idea to clone the original template, and make any changes in the new clone instead:</p>
 <pre class="wiki"><code>[user@dom0 ~]$ qvm-clone fedora-20-x64-minimal &lt;your new template name&gt;</code></pre>
-<p>The sudo package is also missing from this template, but easy to install:</p>
+<p>Not even the sudo package is installed by default, so lets install it:</p>
 <pre class="wiki"><code>[user@F20-Minimal ~]$ su - 
 [user@F20-Minimal ~]$ yum install sudo</code></pre>
 <h3 id="NetVM">NetVM</h3>
