--- a/Templates/FedoraMinimal.html
+++ b/Templates/FedoraMinimal.html
@@ -15,7 +15,7 @@
 <pre class="wiki"><code>[user@F20-Minimal ~]$ sudo yum install NetworkManager network-manager-applet  wireless-tools dbus-x11 dejavu-sans-fonts tar tinyproxy</code></pre>
 <p>And maybe some more optional but useful packages as well:</p>
 <pre class="wiki"><code>[user@F20-Minimal ~]$ sudo yum install pciutils vim-minimal less tcpdump</code></pre>
-<p>If Your network device needs some firmware then you should also install the correspondong packages as well. The <code>lspci; yum search firmware</code> command will help to choose the right one :)</p>
+<p>If Your network device needs some firmware then you should also install the corresponding packages as well. The <code>lspci; yum search firmware</code> command will help to choose the right one :)</p>
 <h3 id="ProxyVM">ProxyVM</h3>
 <p>If You want to use this template as a ProxyVM You may want to install evem more packages</p>
 <h4 id="Firewall">Firewall</h4>
