--- a/Templates/FedoraMinimal.html
+++ b/Templates/FedoraMinimal.html
@@ -16,7 +16,7 @@
 <p>If You want to use this template to for standard NetVMs You should install some more packeges:</p>
 <pre class="wiki"><code>[user@F20-Minimal ~]$ sudo yum install NetworkManager network-manager-applet  wireless-tools dbus-x11 dejavu-sans-fonts tar tinyproxy</code></pre>
 <p>And maybe some more optional but useful packages as well:</p>
-<pre class="wiki"><code>[user@F20-Minimal ~]$ sudo yum install pciutils vim-minimal less tcpdump</code></pre>
+<pre class="wiki"><code>[user@F20-Minimal ~]$ sudo yum install pciutils vim-minimal less tcpdump telnet</code></pre>
 <p>If Your network device needs some firmware then you should also install the corresponding packages as well. The <code>lspci; yum search firmware</code> command will help to choose the right one :)</p>
 <h3 id="asaProxyVM">as a ProxyVM</h3>
 <p>If You want to use this template as a ProxyVM You may want to install evem more packages</p>
